--- a/gb/12/7/7/n3630152.md
+++ b/gb/12/7/7/n3630152.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iyxyqt3645/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iyxyqt3645/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iyxyqt3645/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>古文欣：高级五毛现形 何去何从？</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2012年07月07日讯】<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%BA%94%E6%AF%9B.md#1">五毛</a>的称呼大概是从五毛钱的俸禄得来的，据说，中共曾规定，凡是在网上发一篇媚党、踩民、造谣之类文字的，循例可到党那里领取五毛钱的俸禄。后来，民众就把这类靠语言作恶的家伙统称为“五毛党”，或者干脆简称为五毛。</p>
-<p>不过，时移境迁，现在的价码已经远远的高过<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%BA%94%E6%AF%9B.md#1">五毛</a>钱了，但五毛的金字招牌还是被保留了下来。虽然统称为五毛，含金量还是很有差别的，高级五毛与低级五毛的价码差距，似乎可以用贫富极度分化来描述了。</p>
+	<p>【大纪元2012年07月07日讯】<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%94%E6%AF%9B.md#1">五毛</a>的称呼大概是从五毛钱的俸禄得来的，据说，中共曾规定，凡是在网上发一篇媚党、踩民、造谣之类文字的，循例可到党那里领取五毛钱的俸禄。后来，民众就把这类靠语言作恶的家伙统称为“五毛党”，或者干脆简称为五毛。</p>
+<p>不过，时移境迁，现在的价码已经远远的高过<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%94%E6%AF%9B.md#1">五毛</a>钱了，但五毛的金字招牌还是被保留了下来。虽然统称为五毛，含金量还是很有差别的，高级五毛与低级五毛的价码差距，似乎可以用贫富极度分化来描述了。</p>
 <p>低级的五毛因为其含金量低，所以，党给它的俸禄也就很低了，不过，为了营造蜂拥气氛，党还是用得上它们的。高级五毛就不同了，因为一般都拥有某个头衔，或者带着炫目的桂冠，或者党性极强，党把它们视作宝贝，用起来就爱不释手，尽管这些五毛每每被民众拍砖，但，党还是照用不误，一者，这样的五毛实在难找；二者，久经考验，用着放心；三者，心黑脸厚，抗击打能力超强；四者，尽管很多时候很多人会向其拍砖，但还是能迷惑一些糊涂人。</p>
 <p>不管是高级五毛还是低级五毛，都有着共同的狗性。当然，这样形容，好像对不住狗，因为真正的狗具有忠诚的秉性。只是，当人们骂谁是狗的时候，绝对不是从忠诚这个角度出发的，而是从狗的另一面—媚和疯这个角度出发的。</p>
 <p>就像世间的事物都有两面性一样，狗也具有忠诚和媚疯两面性。骂那些替中共呐喊的五毛为狗，就是因为这样的东西具有媚疯的个性。当然，高级五毛因为很受主子青睐，每每都会被主子在额头上或脖子上挂个金字招牌，以显示身价非凡。</p>
@@ -17,12 +17,12 @@
 <p>具有妖媚功夫的还有环球时报总编辑胡锡进，这东西端午节吃粽子竟然能吃出屈原爱党论，在党的腐败浊流中沉浮竟然能激荡出适度腐败利国利民论，媚党的含金量也很十足。</p>
 <p>当然，具有妖媚功夫的高级五毛还有不少，这里就不一一列举了。另一类高级五毛则具有鲜明的疯狗特征。</p>
 <p>这类高级五毛的疯有两种表现，一是疯叫，一是疯咬。</p>
-<p>疯叫的五毛当首推<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E5%BC%A0%E5%8F%AC%E5%BF%A0.md#1">张召忠</a>了。这东西长着一副唬人的面孔，言语眉眼间透着真诚的傻气，脑门上戴着教授的桂冠，肩头上扛着少将的军衔，说起疯话来一套一套的，把观众逗的前仰后合的，杀伤力超强超强的。民众鉴于张将军对其力挺对像卓越的杀伤贡献，奉送个“挺谁谁死”的雅号，热切期盼张将军回国挺一挺中共，却被中共严防死守着不让张将军有力挺自己的机会。</p>
+<p>疯叫的五毛当首推<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%BC%A0%E5%8F%AC%E5%BF%A0.md#1">张召忠</a>了。这东西长着一副唬人的面孔，言语眉眼间透着真诚的傻气，脑门上戴着教授的桂冠，肩头上扛着少将的军衔，说起疯话来一套一套的，把观众逗的前仰后合的，杀伤力超强超强的。民众鉴于张将军对其力挺对像卓越的杀伤贡献，奉送个“挺谁谁死”的雅号，热切期盼张将军回国挺一挺中共，却被中共严防死守着不让张将军有力挺自己的机会。</p>
 <p>前两天又冒出来个中国现代国家关系研究院副研究员田文林，这五毛名衔也够唬人的，发的一篇《“阿拉伯之春”使民众付出巨大代价》的雄文也很有疯叫的范儿。</p>
 <p>这家伙想中共之所想怕中共之所怕，甚是恐惧阿拉伯之春涌进国门会要了中共的命，于是，极力渲染茉莉花革命的不可估量的代价，为了吓阻民众拿起枪杆子革命，不惜把中共的开山鼻祖毛流氓的“枪杆子里面出政权”的古训给卖了，还继续用中共的稳定压倒一切的鬼话来迷惑人民，结果，却招来民众愤怒的群起拍砖。</p>
 <p>疯叫的五毛具有媚共迷众的功能，而另一类疯咬的五毛则唯中共马首是瞻，只要是中共不喜欢的，它们都会疯狂的扑上去一顿乱咬。</p>
-<p>一般的疯狗，那是疯到底的，逮谁咬谁，但像司马南、孔庆东、<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E5%90%B4%E6%B3%95%E5%A4%A9.md#1">吴法天</a>这类疯狗，则只咬好人不咬中共。面向中共的时候，它们立马就是一副哈巴狗的媚态。</p>
-<p>被称为“高级五毛”的中国政法大学副教授<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E5%90%B4%E6%B3%95%E5%A4%A9.md#1">吴法天</a>，因为在网上替中共疯咬好人而引来众怒。七月六日，这东西觉得网骂不过瘾，约定与四川籍的弱女子周燕在北京朝阳公园南门会面单挑，刚一见面，这疯狗就粗口疯咬，结果被闻讯而来的民众围殴、追打、掷鸡蛋，四脚朝天跌倒在地，现场一片欢呼。</p>
+<p>一般的疯狗，那是疯到底的，逮谁咬谁，但像司马南、孔庆东、<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%90%B4%E6%B3%95%E5%A4%A9.md#1">吴法天</a>这类疯狗，则只咬好人不咬中共。面向中共的时候，它们立马就是一副哈巴狗的媚态。</p>
+<p>被称为“高级五毛”的中国政法大学副教授<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%90%B4%E6%B3%95%E5%A4%A9.md#1">吴法天</a>，因为在网上替中共疯咬好人而引来众怒。七月六日，这东西觉得网骂不过瘾，约定与四川籍的弱女子周燕在北京朝阳公园南门会面单挑，刚一见面，这疯狗就粗口疯咬，结果被闻讯而来的民众围殴、追打、掷鸡蛋，四脚朝天跌倒在地，现场一片欢呼。</p>
 <p>看来，这疯狗碰到一干不信邪的民众也疯不起来了。这类疯狗，本来是仗着主子的威势才敢疯咬的，在虚拟空间疯咬顺嘴了，竟然忘了民众也有手脚和臭鸡蛋在手，还要去现实世界面见单挑，被痛殴着落荒而逃也是活该。</p>
 <p>话说回来，不管是媚惑的五毛还是疯癫的五毛，它们的狗性其实都是中共的党性，是被党的迷魂汤灌糊涂了，才充当了令人不齿的五毛角色。按理说，这些家伙都有着一般人所没有的获取知识的优势，本来应该堂堂正正的活着，却为着带血的馒头或者带肉的骨头像哈巴狗或疯狗一样的被中共玩弄着又去坑害民众，实在是可恶可耻又可怜的。</p>
 <p>如今，天灭中共马上就要兑现了，这一干高级五毛再不迅速回头将功补过，只好随中共一道毁灭了。人选择什么都是自己说了算，是继续做狗还是回头做人，那就看自己的选择了。</p>
@@ -32,45 +32,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/7/30/n3646597.md#1">【郑欣然】：与胡锦涛谈天命（上）</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/7/30/n3646608.md#1">【周晓辉】：胡锦涛背不起的黑锅</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/7/30/n3646611.md#1">薄谷开来被诉：刑事案？政治案？(1)</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/7/30/n3646738.md#1">鲍彤：谷开来成替罪羊 意在保护薄熙来</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/3/9/23/n380859.md#1">古文欣赏 ---- 孔子庙碑</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/6/17/n3614432.md#1">古文欣：城管被民众“围击”说明了什么</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/6/18/n3614882.md#1">古文欣：“小板凳”的热泪与教委官员的冰霜</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/12/6/19/n3615747.md#1">古文欣： 周永康“病入膏肓”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/3/9/23/n380859.md#1">古文欣赏 ---- 孔子庙碑</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/6/17/n3614432.md#1">古文欣：城管被民众“围击”说明了什么</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/6/18/n3614882.md#1">古文欣：“小板凳”的热泪与教委官员的冰霜</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/6/19/n3615747.md#1">古文欣： 周永康“病入膏肓”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214702.md#1" target="_blank">中共淫乱的前生今世（1）马列斯毛</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/8/n13630888.md#1">【拍案惊奇】谈判意外让步 俄安全局：我们赢不了</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/7/n13628844.md#1">【方菲访谈】章家敦：中共暗助俄罗斯</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/2/n13615256.md#1">在Costco买新鲜食物存冰箱 营养师推荐5种</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/7/n13629038.md#1">网络流出俄情报机构报告：对乌战争无胜算</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/2/26/n13607564.md#1">【思想领袖】马龙：打疫苗越多 为何感染风险越大</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/8/n13629675.md#1">大S徐熙媛与“酷龙”具俊晔续前缘 宣布结婚</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/7/n13629278.md#1">客串韩剧演大妈？ 范冰冰憔悴落魄造型曝光</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/2/26/n13606897.md#1">雨天鞋子湿掉怎么办？4方法可速干、不发臭</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/6/n13626183.md#1">生活中霉菌别小觑 可增加疾病风险 如何去除</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/22/3/7/n13628596.md#1">对抗皮肤老化的5个天然良方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iyxyqt3645/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iyxyqt3645/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/7/n3630152.htm">古文欣：高级五毛现形 何去何从？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/7/n3630152.htm">古文欣：高级五毛现形 何去何从？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/iyxyqt3645/djy/blob/master/gb/12/7/7/n3630152.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iyxyqt3645/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iyxyqt3645/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/12/7/7/n3630152.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
